# pong

./: .gitignore  AssetManager.cpp  AssetManager.h  Bush.cpp  Bush.h  CMakeLists.txt  Camera.cpp  Camera.h  Clouds.cpp  Clouds.h  Font.cpp  Font.h  FpsCounter.cpp  FpsCounter.h  Game.cpp  Game.h  Graph.sdf  Graph.sln  Graph.vcxproj  Graph.vcxproj.filters  GuiElement.cpp  GuiElement.h  Label.cpp  Label.h  Mesh.cpp  Mesh.h  Patches.cpp  Patches.h  README.md  ReflectionHolder.cpp  ReflectionHolder.h  RenderCommon.h  RenderableMesh.cpp  RenderableMesh.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  SkyBox.cpp  SkyBox.h  (+34 more)
shaders/: Bush.fs  Bush.vs  BushFragmentShader.fragmentshader  BushVertexShader.vertexshader  Clouds.fs  Font.fs  FontFragmentShader.fragmentshader  FontVertexShader.vertexshader  FragmentShader.fragmentshader  GuiElement.fs  GuiElement.vs  SkyBox.fs  SkyBox.vs  Terrain.fs  Terrain.vs  TerrainFragmentShader.fragmentshader  TerrainVertexShader.vertexshader  Test.fs  Test.vs  TestVertexShader.vertexshader  TexturedMesh.fs  TexturedMesh.vs  VertexShader.vertexshader  Water.fs  Water.vs  shaders.rfx
src/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Clouds.cpp  Clouds.h  Controls.cpp  Controls.h  Font.cpp  Font.h  FpsCounter.cpp  FpsCounter.h  Game.cpp  Game.h  GuiElement.cpp  GuiElement.h  Label.cpp  Label.h  Patches.cpp  Patches.h  ReflectionHolder.cpp  ReflectionHolder.h  RenderCommon.h  RenderableMesh.cpp  RenderableMesh.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  Sun.cpp  Sun.h  Terrain.cpp  Terrain.h  (+32 more)
(+11 files in other folders)
